--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -11,3 +11,11 @@ header {
     width: 100%;
     height: 75px;
 }
+
+img {
+    height: 300px;
+    width: 300px;
+    border: round;
+}
+
+span {}
